# obsidianki

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/obsidianki/: __main__.py  convert.py  good_mac_emoji.txt  grammar.py  my_emoji.py  splitter.py
tests/: test_convert.py
